[gd_scene load_steps=15 format=2]

[ext_resource path="res://JesusSaves/src/GUI/Buttons/QuitGame.gd" type="Script" id=1]
[ext_resource path="res://JesusSaves/assets/fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://JesusSaves/assets/fonts/bigfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Pressed2.tres" type="StyleBox" id=4]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Normal2.tres" type="StyleBox" id=5]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Normal_Green.tres" type="StyleBox" id=6]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Normal_Red.tres" type="StyleBox" id=7]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Pressed_Green.tres" type="StyleBox" id=8]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Hover_Green.tres" type="StyleBox" id=9]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Pressed_Red.tres" type="StyleBox" id=10]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Hover_Red.tres" type="StyleBox" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.0705882, 0.203922, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.67451, 0.0705882, 0.0705882, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="QuitGame" type="Panel"]
pause_mode = 2
anchor_left = 0.533
anchor_top = 0.5
anchor_right = 0.533
anchor_bottom = 0.5
margin_left = -127.68
margin_top = -78.0
margin_right = 128.32
margin_bottom = 82.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_right = 72.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Game Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 40.0
margin_right = 160.0
margin_bottom = 72.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="Button" parent="."]
visible = false
margin_left = 88.0
margin_top = 80.0
margin_right = 168.0
margin_bottom = 110.0
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
pressed = true
text = "Music On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -40.0
margin_right = -7.0
margin_bottom = -14.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -40.0
margin_right = 64.0
margin_bottom = -14.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="toggled" from="MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
